<resources>
    <string name="app_name">Shop</string>
    <string name="facebook_app_id">1323184991102625</string>

    <string name="preference">myPreference</string>
    <string name="user_id_preference">userId</string>
    <string name="item_move_preference">itemToMove</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login">Login</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="register_text">Don\'t have an account? Register now</string>
    <string name="forgot_text">Enter your email to recover your password</string>
    <string name="login_user_empty">User name field is empty</string>
    <string name="login_password_empty">Password field is empty</string>
    <string name="user_name">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="forgot">Forgot</string>
    <string name="password_match_text">Passwords don\'t match </string>
    <string name="password_size_text">Password must be between 6 and 20 characters</string>
    <string name="password_validation_text">Your password must contain at least one uppercase letter, one number and one special character!</string>
    <string name="incorrect_login">Incorrect user name or password</string>
    <string name="email_exists">This email already exists</string>
    <string name="empty_folder_message">Tap the button to add items</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_base">BaseActivity</string>

    <string-array name="productNumber">
        <item>1 buc</item>
        <item>2 buc</item>
        <item>3 buc</item>
        <item>4 buc</item>
        <item>5 buc</item>
    </string-array>

    <string-array name="profileSex">
        <item>Masculin</item>
        <item>Feminin</item>
    </string-array>


    <string-array name="productCategory">
        <item>Laptop</item>
        <item>Accesorii Laptop</item>
        <item>Telefoane mobile</item>
        <item>Accesotii Telefoane</item>
        <item>Tablete</item>
        <item>Accesorii Tablete</item>

        <item>Placi video</item>
        <item>Placi de baza</item>
        <item>Placi de Sunet</item>
        <item>Memorii</item>
        <item>Procesoare</item>
        <item>Mouse</item>
        <item>Tastaturi</item>
        <item>Hard Disk-uri</item>
        <item>SSD-uri</item>
        <item>Casti PC</item>
        <item>Camera Web</item>

        <item>Audio</item>
        <item>Televizoare</item>
        <item>Accesorii TV</item>
        <item>Aparate foto</item>
        <item>Accesorii foto</item>
        <item>Console</item>
        <item>Accesorii Gaming</item>
        <item>Jocuri</item>
    </string-array>
</resources>
